[gd_scene load_steps=6 format=2]

[ext_resource path="res://Objects/Button.gd" type="Script" id=1]
[ext_resource path="res://Objects/Button.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.0227
height = 13.4004

[sub_resource type="CapsuleShape2D" id=2]
radius = 5.69656
height = 10.5725

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 12.2644, 14.342 )

[node name="Button" type="StaticBody2D" groups=[
"Buttons",
]]
position = Vector2( 0, -4 )
scale = Vector2( 2.38618, 2.38618 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 3.8147e-06, 5.33182 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -2 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]

[node name="DisabledButtonCollision" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 3 )
disabled = true
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
